--- a/src/popup.html
+++ b/src/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>非遗文创资讯 - Popup</title>
+    <title>设计视界 · 思政融新</title>
     <link rel="stylesheet" href="./popup.css" />
   </head>
   <body>
