--- a/src/newtab.html
+++ b/src/newtab.html
@@ -11,7 +11,7 @@
       <header class="topbar">
         <div class="brand">
           <img src="../icons/icon48.png" alt="logo" class="brand-logo" />
-          <div>
+          <div class="brand-text">
             <div class="title">设计视界 · 思政融新</div>
             <div class="subtitle">一站式整合国内外最新设计资讯，以思想之光引领设计创新。</div>
           </div>
